--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,3 @@
-main{
-  padding-top: 70px;
-}
-
 .background-container{
   height: 100vh;
   display: flex;
@@ -19,6 +15,9 @@ main{
 
 .shop-now-btn{
   position: absolute;
+  background-color: white;
+  color: black;
+  text-decoration: none;
   padding: 10px 20px;
   font-size: 1.1em;
   border: none;
