--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -174,6 +174,7 @@
   flex: 1;
   padding: 1.5vh .8vh 1.5 .8vh;
   margin: 0;
+  cursor: pointer;
 }
 
 .coupon-container button:hover{
@@ -237,6 +238,7 @@
   font-family: "Poppins", sans-serif;
   font-size: .8em;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .cart-summary-receipt button:hover{
